# audit-packages-tool

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  audit_packages.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: migration_checklist.md
src/audit_packages_tool/: __init__.py  __main__.py  cli.py
src/audit_packages_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/audit_packages_tool/models/: __init__.py  package.py
src/audit_packages_tool/reporting/: __init__.py  console.py  json_export.py
src/audit_packages_tool/scanner/: __init__.py  auditor.py  executable_detector.py
tests/: __init__.py  test_executable_detector.py  test_models.py
